// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`new:component with example code and with state generates expected C.stories.tsx contents 1`] = `
"import { storiesOf } from \\"@storybook/react-native\\"
import React from \\"react\\"
import { C } from \\"./C\\"

storiesOf(\\"C\\", module).add(\\"example\\", () => <C />)
"
`;

exports[`new:component with example code and with state generates expected C.test.tsx contents 1`] = `
"import { C } from \\"./C\\"
import { render, fireEvent } from \\"@testing-library/react-native\\"
import React from \\"react\\"

describe(\\"C\\", () => {
  it(\\"has correct message before clicking\\", () => {
    // Arrange
    const message = \\"You clicked 0 times\\"

    // Act
    const { getByText } = render(<C />)
    const received = getByText(message)

    // Assert
    expect(received).toBeDefined()
  })

  it(\\"has correct message after clicking\\", () => {
    // Arrange
    const name = \\"Click Me\\"
    const message = \\"You clicked 1 times\\"

    // Act
    const { getByText } = render(<C />)
    const button = getByText(name)
    fireEvent.press(button)
    const received = getByText(message)

    // Assert
    expect(received).toBeDefined()
  })
})
"
`;

exports[`new:component with example code and with state generates expected C.tsx contents 1`] = `
"import React, { useState } from \\"react\\"
import { Button, StyleSheet, Text, View } from \\"react-native\\"

type Props = Readonly<{}>

export function C(_: Props) {
  const [count, setCount] = useState(0)
  return (
    <View style={styles.container}>
      <Text>You clicked {count} times</Text>
      <Button onPress={() => setCount(count + 1)} title=\\"Click Me\\" />
    </View>
  )
}

const styles = StyleSheet.create({
  container: {},
})
"
`;

exports[`new:component with example code and with state generates expected README.md contents 1`] = `
"# \`<C />\`

DESCRIPTION_HERE

## Directory Structure

- \`stories.tsx\`: Component playground (\`npm run test:playground\`)
- \`test.tsx\`: Component tests (\`npm run test:unit\`)
- \`index.tsx\`: Component code
- \`README.md\`: Component documentation (hey, that's me!)

## Example

![C](../../../.loki/reference/chrome_C_example.png)

> Image location: [\`.loki/reference/chrome_C_example.png\`](../../../.loki/reference/chrome_C_example.png)
> 
> To regenerate: 
> 1. \`npm run test:playground\` (skip if running)
> 1. \`npm run test:visual:update -- --storiesFilter=\\"^C example\\\\$\\"\`
"
`;

exports[`new:component with example code and with state generates expected index.ts contents 1`] = `
"export { C } from \\"./C\\"
"
`;

exports[`new:component with example code but without state generates expected B.stories.tsx contents 1`] = `
"import { storiesOf } from \\"@storybook/react-native\\"
import React from \\"react\\"
import { B } from \\"./B\\"

storiesOf(\\"B\\", module).add(\\"example\\", () => <B />)
"
`;

exports[`new:component with example code but without state generates expected B.test.tsx contents 1`] = `
"import { B } from \\"./B\\"
import { render } from \\"@testing-library/react-native\\"
import React from \\"react\\"

describe(\\"B\\", () => {
  it(\\"name prop is rendered\\", () => {
    // Arrange
    const name = \\"B\\"

    // Act
    const { getByText } = render(<B />)
    const received = getByText(name)

    // Assert
    expect(received).toBeDefined()
  })
})
"
`;

exports[`new:component with example code but without state generates expected B.tsx contents 1`] = `
"import React from \\"react\\"
import { StyleSheet, Text, View } from \\"react-native\\"

type Props = Readonly<{}>

export function B(_: Props) {
  return (
    <View style={styles.container}>
      <Text>B</Text>
    </View>
  )
}

const styles = StyleSheet.create({
  container: {},
})
"
`;

exports[`new:component with example code but without state generates expected README.md contents 1`] = `
"# \`<B />\`

DESCRIPTION_HERE

## Directory Structure

- \`stories.tsx\`: Component playground (\`npm run test:playground\`)
- \`test.tsx\`: Component tests (\`npm run test:unit\`)
- \`index.tsx\`: Component code
- \`README.md\`: Component documentation (hey, that's me!)

## Example

![B](../../../.loki/reference/chrome_B_example.png)

> Image location: [\`.loki/reference/chrome_B_example.png\`](../../../.loki/reference/chrome_B_example.png)
> 
> To regenerate: 
> 1. \`npm run test:playground\` (skip if running)
> 1. \`npm run test:visual:update -- --storiesFilter=\\"^B example\\\\$\\"\`
"
`;

exports[`new:component with example code but without state generates expected index.ts contents 1`] = `
"export { B } from \\"./B\\"
"
`;

exports[`new:component without example code generates expected A.stories.tsx contents 1`] = `
"import { storiesOf } from \\"@storybook/react-native\\"
import React from \\"react\\"
import { A } from \\"./A\\"

storiesOf(\\"A\\", module).add(\\"example\\", () => <A />)
"
`;

exports[`new:component without example code generates expected A.test.tsx contents 1`] = `
"import { A } from \\"./A\\"
import React from \\"react\\"

describe(\\"A\\", () => {
  it(\\"is defined\\", () => expect(<A />).toBeDefined())

  it.todo(\`add meaningful tests 👍\`)
})
"
`;

exports[`new:component without example code generates expected A.tsx contents 1`] = `
"import React from \\"react\\"

export function A() {
  return <></>
}
"
`;

exports[`new:component without example code generates expected README.md contents 1`] = `
"# \`<A />\`

DESCRIPTION_HERE

## Directory Structure

- \`stories.tsx\`: Component playground (\`npm run test:playground\`)
- \`test.tsx\`: Component tests (\`npm run test:unit\`)
- \`index.tsx\`: Component code
- \`README.md\`: Component documentation (hey, that's me!)

## Example

![A](../../../.loki/reference/chrome_A_example.png)

> Image location: [\`.loki/reference/chrome_A_example.png\`](../../../.loki/reference/chrome_A_example.png)
> 
> To regenerate: 
> 1. \`npm run test:playground\` (skip if running)
> 1. \`npm run test:visual:update -- --storiesFilter=\\"^A example\\\\$\\"\`
"
`;

exports[`new:component without example code generates expected index.ts contents 1`] = `
"export { A } from \\"./A\\"
"
`;
